# Architect

./: .gitignore  QUICKSTART.md  README.md  package.json  vercel.json
backend/: .gitignore  README.md  env.example  pyproject.toml  render.yaml
backend/app/: config.py  main.py
backend/app/agents/: graph.py  librarian.py  mentor.py  planner.py
backend/app/api/: routes.py
backend/app/models/: schemas.py  state.py
backend/app/services/: crawler_service.py  db_service.py  llm_service.py  vector_service.py
docs/: database_setup.sql  poetry_setup.md  supabase_setup.md
frontend/: README.md  next.config.ts  package.json  tailwind.config.ts  vercel.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/callback/: route.ts
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/register/: page.tsx
frontend/src/app/auth/signout/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/workspace/: WorkspaceShell.tsx
frontend/src/app/workspace/[projectId]/: page.tsx
frontend/src/app/workspace/chat/: ChatPanel.tsx
frontend/src/app/workspace/flow/: FlowPanel.tsx
frontend/src/components/dashboard/: CreateProjectDialog.tsx  ProjectsList.tsx
frontend/src/components/workspace/: PhaseIndicator.tsx  WorkspaceShell.tsx
frontend/src/hooks/: useAuth.ts  useChat.ts  userProjects.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/lib/supabase/: client.ts  middleware.ts  server.ts
frontend/src/stores/: useProjectStore.ts
frontend/src/types/: index.ts
(+5 files in other folders)
